Added ItemSelector class that is used by ItemSlot to select build items.
The ItemSelector is not fully functional, but I'm commiting this before I try changing it to a <dialog> element

--- a/src/components/ItemBuild/ItemSlot/ItemSlot.css
+++ b/src/components/ItemBuild/ItemSlot/ItemSlot.css
@@ -3,5 +3,16 @@ li {
     background-color: blue;
     min-width: 3em;
     min-height: 3em;
-    margin: 2px;   
+    margin: 2px;  
+    position: relative;
+}
+
+button {
+    position: absolute;
+    display: box;
+    width: 100%;
+    height: 100%;
+    opacity: 0%;
+    margin: 0;
+    padding: 0;
 }
