--- a/src/components/ItemBuild/ItemSelector/ItemSelector.css
+++ b/src/components/ItemBuild/ItemSelector/ItemSelector.css
@@ -1,19 +1,16 @@
 
-div.background-fade {
-    position: fixed;
-    top: 0;
-    left: 0;
-    widows: 100%;
+dialog::backdrop {
+    background: rgba(47, 79, 79, 0.25);
+    width: 100%;
     height: 100%;
-    background-color: rgba(47, 79, 79, 0.25);
 }
 
-div.ItemSelector {
-    display: none;
-    position: fixed;
-    top: 20%;
-    left: 20%;
+dialog {
     width: 80%;
     height: 80%;
-    background-color: navy;
+    background: navy;
+}
+
+button {
+    margin: 0;
 }
