--- a/src/components/ItemBuild/ItemSelector/ItemSelector.css
+++ b/src/components/ItemBuild/ItemSelector/ItemSelector.css
@@ -1,16 +1,34 @@
 
 dialog::backdrop {
-    background: rgba(47, 79, 79, 0.25);
-    width: 100%;
-    height: 100%;
+    background: rgba(47, 79, 79, 0.0.5);
+
 }
 
 dialog {
-    width: 80%;
-    height: 80%;
     background: navy;
 }
 
+.search, .item-view {
+    display: inline-block;
+    height: 100%;
+}
+
+ul.search-results {
+    overflow: hidden;
+    overflow-y: scroll;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    list-style-type: none;
+}
+
+li.item-search-result {
+    flex: 1 0 50%;
+    box-sizing: border-box;
+    padding: 1px;
+}
+
 button {
-    margin: 0;
+    background: silver;
+    opacity: 100%;
 }
