--- a/src/components/ItemBuild/ItemSlot/ItemSlot.css
+++ b/src/components/ItemBuild/ItemSlot/ItemSlot.css
@@ -1,18 +1,16 @@
 
 li {
     background-color: blue;
-    min-width: 3em;
-    min-height: 3em;
     margin: 2px;  
-    position: relative;
+    padding: 0;
 }
 
 button {
-    position: absolute;
-    display: box;
-    width: 100%;
+    display: block;
+    min-width: 3em;
+    min-height: 3em; 
     height: 100%;
-    opacity: 0%;
     margin: 0;
     padding: 0;
+    border: 0;
 }
