some uncommitted changes from ~Dec. Plus added redux-toolkit

--- a/src/components/ItemBuild/ItemSelector/ItemSelector.css
+++ b/src/components/ItemBuild/ItemSelector/ItemSelector.css
@@ -6,6 +6,12 @@ dialog::backdrop {
 
 dialog {
     background: navy;
+    padding: 0;
+    border: 0;
+}
+
+form {
+    padding: 1em;
 }
 
 .search, .item-view {
