--- a/src/components/ItemBuild/ItemSlot/ItemSlot.css
+++ b/src/components/ItemBuild/ItemSlot/ItemSlot.css
@@ -3,9 +3,15 @@ li {
     background-color: blue;
     margin: 2px;  
     padding: 0;
+    position: relative;
 }
 
-button {
+img.item-slot {
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    max-width: 3em;
+    max-height: 3em;
     display: block;
     min-width: 3em;
     min-height: 3em; 
