Changed GodSelector to use ant.d Dropdown component. Changed image urls to pull from smitegame.com, temporarily until we have a back-end server to provide images.

--- a/src/components/GodStats/GodStats.css
+++ b/src/components/GodStats/GodStats.css
@@ -1,8 +1,19 @@
 .GodStats {
     display: inline-block;
     flex-grow: 1;
-    background-color: cornflowerblue;
     padding: 20px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.godSelection {
+    width: min-content
+}
+
+.godSelection > img, .godSelection > select {
+    display: block
+}
+
+.god-selection-menu {
+    width: 100%
 }
