--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,7 +6,9 @@
   font-family: sans-serif;
   height: 100%;
   width: 100%;
-  border: 2px solid black;
+  background-color: black;
+  border: cornflowerblue solid 2px;
+  color: cornflowerblue
 }
 
 .App-header {
