--- a/src/components/GodStats/GodStats.css
+++ b/src/components/GodStats/GodStats.css
@@ -1,19 +1,36 @@
 .GodStats {
-    display: inline-block;
-    flex-grow: 1;
-    padding: 20px;
+    padding: 10px;
     margin-left: auto;
     margin-right: auto;
 }
 
 .godSelection {
-    width: min-content
+    width: min-content;
+    display: inline-block;
+    margin-right: 10px;
+    vertical-align: top;
 }
 
-.godSelection > img, .godSelection > select {
-    display: block
+.godSelection > img {
+    display: inline-block;
+    border: cornflowerblue solid 2px;
+    padding: 4px;
 }
 
 .god-selection-menu {
-    width: 100%
+    width: 100%;
+    margin-bottom: 6px;
+}
+
+table {
+    display: inline-block;
+}
+
+td.stat-name {
+    text-align: left;
+    font-weight: bold;
+}
+td.stat-value {
+    text-align: right;
+    text-emphasis: none;
 }
