--- a/src/components/ItemBuild/ItemSlot/ItemSlot.css
+++ b/src/components/ItemBuild/ItemSlot/ItemSlot.css
@@ -1,8 +1,8 @@
 
 
 img.item-slot {
-    border: 1px solid black;
-    margin: 2px;  
+    border: 2px solid cornflowerblue;
+    margin: 0px 2px 2px 2px;  
     padding: 2px;
     position: relative;
     top: 0;
