--- a/src/components/ItemBuild/ItemPicker/ItemPicker.css
+++ b/src/components/ItemBuild/ItemPicker/ItemPicker.css
@@ -5,27 +5,10 @@ dialog::backdrop {
 
 
 .item-picker {
-    width: 100%;
+    width: 80%;
+    height: 80%;
     --black-recess: rgba(10, 10, 10, .9);
-    display: flex;
-    flex-direction: row;
-    padding: 10px;
-    background: var(--dark-grey-background);
 }
-
-.border-gradient {
-    display: flex;
-
-    padding: 2px;
-    margin-top: 30px;
-    margin-bottom: 40px;
-    min-width: 80%;
-    min-height: 80%;
-    background: var(--light-corners);
-    border: none;
-}
-
- 
 
 .search {
     display: flex;
@@ -36,11 +19,7 @@ dialog::backdrop {
 
 .filters {
     flex: 0 0 auto;
-    border: cornflowerblue solid 2px;
-}
-
-.filter-list {
-    width: fit-content;
+    border: solid 2px var(--light-blue-lines)
 }
 
 .search-items-and-input {
@@ -54,9 +33,9 @@ ul.search-results {
     display: flex;
     overflow: hidden;
     overflow-y: scroll;
-    flex: 1 0 80%;
+    flex: 1 0 60%;
     background-color: var(--black-recess);
-    border: cornflowerblue solid 2px;
+    border: var(--light-blue-lines) solid 2px;
     margin: 2px;
     flex-wrap: wrap;
     flex-direction: row;
@@ -66,7 +45,7 @@ ul.search-results {
 .search-input {
     flex: 0 0 auto;
     background-color: var(--black-recess);
-    border: var(--light-blue-lines) solid 1px;
+    border: var(--light-blue-lines) solid 2px;
     border-radius: 5px;
     margin: 2px;
 }
