CSS changes for timeline slider so that I can use slider marks to hold ItemSlot components, instead of the ItemBuild.
Added a type property to BuildEvent, this will help the timelineSlider distinguish events.

Removed timeRangeReducer since we get the time range from the last element of the BuildEvent list.

--- a/src/components/TimelineSlider/TimelineSlider.css
+++ b/src/components/TimelineSlider/TimelineSlider.css
@@ -5,11 +5,29 @@
 }
 
 .slidercontainer {
-    display: inline-block;
+    display: block;
 }
 
 #time-slider {
     -webkit-appearance: slider-vertical;
     writing-mode: bt-lr;
     height: 100%;
+}
+
+.ant-slider, .ant-slider-mark {
+    width: auto !important;
+}
+.ant-slider-mark, .ant-slider-mark-text {
+    position: relative;
+}
+.ant-slider:hover .ant-slider-rail {
+    background-color: rgb(126, 126, 126);
+}
+
+.ant-slider-rail, div.ant-slider-rail:hover, div.ant-slider-rail::selection {
+    background: rgb(126, 126, 126);
+}
+
+.ant-slider-track, ant-slider:hover ant-slider-track {
+    background-color: #1890ff;
 }
