Changed TimelineSlider so it displays slider steps for each item in the ItemBuilds.

--- a/src/components/TimelineSlider/TimelineSlider.css
+++ b/src/components/TimelineSlider/TimelineSlider.css
@@ -17,6 +17,11 @@
 .ant-slider, .ant-slider-mark {
     width: auto !important;
 }
+.ant-slider-mark {
+    display: flex;
+    flex-direction: column;
+}
+
 .ant-slider-mark, .ant-slider-mark-text {
     position: relative;
 }
