--- a/src/components/TimelineSlider/TimelineSlider.css
+++ b/src/components/TimelineSlider/TimelineSlider.css
@@ -1,30 +1,21 @@
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
 
 .slidercontainer {
     display: block;
 }
 
-#time-slider {
-    -webkit-appearance: slider-vertical;
-    writing-mode: bt-lr;
-    height: 100%;
+.ant-slider-vertical > .ant-slider-mark {
+    left: 50%;
 }
 
-.ant-slider, .ant-slider-mark {
-    width: auto !important;
-}
-.ant-slider-mark {
-    display: flex;
-    flex-direction: column;
+.ant-slider-vertical .ant-slider-mark-text {
+    left: 0;
 }
 
-.ant-slider-mark, .ant-slider-mark-text {
-    position: relative;
+.ant-slider-mark-text {
+    transform: translate(-50%, -50%);
+    min-width: 100%;
 }
+
 .ant-slider:hover .ant-slider-rail {
     background-color: rgb(126, 126, 126);
 }
