--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -12,6 +12,8 @@ body, :root {
   --two-light-corners: linear-gradient(to top left, cornflowerblue, rgba(0,0,0,0) 25%, rgba(0,0,0,0) 75%, cornflowerblue);
   color: var(--light-blue-lines);
   font-size: 100%;
+  display: grid;
+  place-items: center;
 }
 
 .major-container {
@@ -51,11 +53,12 @@ body, :root {
 
 
 .App {
-  display: flex;
-  flex-flow: row;
+  display: grid;
+  grid-template-columns: 3fr 2fr 3fr;
+  justify-items: center;
   font-family: sans-serif;
-  height: 100%;
-  width: 100%;
+  height: 95vh;
+  width: 100vw;
   padding: 20px;
 }
 
