--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -4,7 +4,7 @@ body {
   background: black;
 }
 
-body, :root {
+body {
   --light-blue-lines: cornflowerblue;
   --dark-grey-background: rgba(20, 20, 30, .95);
   --light-corners: linear-gradient(to top left, cornflowerblue, rgba(0,0,0,0) 25%, rgba(0,0,0,0) 75%, cornflowerblue),
@@ -14,6 +14,10 @@ body, :root {
   font-size: 100%;
   display: grid;
   place-items: center;
+}
+
+#root {
+  height: 100vh;
 }
 
 .major-container {
@@ -57,8 +61,8 @@ body, :root {
   grid-template-columns: 3fr 2fr 3fr;
   justify-items: center;
   font-family: sans-serif;
-  height: 95vh;
+  height: 90vh;
   width: 100vw;
-  padding: 20px;
+  padding: 10px 20px;
 }
 
