--- a/src/components/ItemBuild/ItemPicker/ItemPicker.css
+++ b/src/components/ItemBuild/ItemPicker/ItemPicker.css
@@ -3,40 +3,41 @@ dialog::backdrop {
     background: rgba(47, 79, 79, 0.1);
 }
 
-
 .item-picker {
-    width: 80%;
-    height: 80%;
+    width: 85%;
+    height: 90%;
+    margin-top: 8px;
     --black-recess: rgba(10, 10, 10, .9);
 }
 
-.search {
-    display: flex;
-    flex-direction: row;
-    flex: 2 0 60%;
-    height: 100%;
+.item-picker > .major-container {
+    display: grid;
+    grid-template-columns: 1fr 3fr 2fr;
 }
 
 .filters {
-    flex: 0 0 auto;
-    border: solid 2px var(--light-blue-lines)
+    grid-column: 1;
+    border: solid 1px var(--light-blue-lines);
+    padding: 4px;
 }
 
 .search-items-and-input {
+    grid-column: 2;
     display: flex;
     flex-direction: column;
     flex: 1 0 auto;
     justify-content: space-between;
+    padding: 0 6px;
 }
 
 ul.search-results {
     display: flex;
     overflow: hidden;
     overflow-y: scroll;
-    flex: 1 0 60%;
+    flex: 1 0 auto;
     background-color: var(--black-recess);
-    border: var(--light-blue-lines) solid 2px;
-    margin: 2px;
+    border: var(--light-blue-lines) solid 1px;
+    margin-bottom: 0;
     flex-wrap: wrap;
     flex-direction: row;
     list-style-type: none;
@@ -47,7 +48,7 @@ ul.search-results {
     background-color: var(--black-recess);
     border: var(--light-blue-lines) solid 2px;
     border-radius: 5px;
-    margin: 2px;
+    margin-bottom: 2px;
 }
 
 li.item-search-result {
@@ -56,21 +57,30 @@ li.item-search-result {
     padding: 1px;
 }
 
+::-webkit-scrollbar {
+    background: var(--light-blue-lines);
+    box-shadow: inset 0 0 5px black;
+    border-radius: 10px;
+    border: solid 2px black;
+}
+::-webkit-scrollbar-thumb {
+    background: rgb(163, 195, 255);
+    outline: 1px solid var(--dark-grey-background);
+}
+
 .item-details {
     flex: 1 0 auto;
     min-height: 80%;
-    border: cornflowerblue solid 2px;
     margin-left: 4px;
     margin-bottom: 4px;
 }
 
 .item-view {
+    grid-column: 3;
     display: flex;
     flex-direction: column;
-    min-width: max-content;
-    width: 30%;
-    min-height: 100%;
-    flex: 1 0 auto;
+    border: 1px solid var(--light-blue-lines);
+    padding: 4px;
 }
 
 .control-button-container {
