--- a/src/components/TimelineSlider/TimelineSlider.css
+++ b/src/components/TimelineSlider/TimelineSlider.css
@@ -1,6 +1,7 @@
 
 .slidercontainer {
-    display: block;
+    height: calc(100% - 3em);
+    margin-top: 1em;
 }
 
 .ant-slider-vertical > .ant-slider-mark {
