Made slider-event containers ignore mouse events so they don't block mouseover on the god selector dropdowns.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -48,7 +48,8 @@ body {
 .ant-btn, .ant-dropdown-menu {
   background-color: var(--dark-grey-background);
   border: var(--light-blue-lines) solid 2px;
-  color: var(--light-blue-lines)
+  color: var(--light-blue-lines);
+  pointer-events: auto;
 }
 
 .ant-dropdown-menu-item {
